# pypeople

./: .gitignore  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 0e88142a9678_create_users_table.py  b1a25e18872b_adds_updated_at_field_to_users_table.py
src/pypeople/: app.py  database.py  models.py
src/pythando/: app.py  database.py  main.py
tests/: conftest.py  test_app.py  test_db.py  test_deletes.py  test_gets.py  test_posts.py  test_puts.py
