[project]
name = "pythando"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi[standard]>=0.137.2",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "pytest-random-order>=1.2.0",
    "ruff>=0.15.17",
    "taskipy>=1.14.1",
    "typos>=1.47.2",
]

[tool.pytest.ini_options]
addopts = ['-p no:warnings', '--cov=src', '--cov-context=test']
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 80
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.typos.files]
extend-exclude = ["*.md"]

[tool.taskipy.tasks]
pre_lint = "typos"
lint = "ruff check"
pre_format = "ruff check --fix"
format = "ruff format"
run = "fastapi dev src/pythando/app.py"
pre_test = "task lint"
test = "pytest -s -x -vv"
post_test = "coverage html --show-contexts"

[tool.basedpyright]
include = ["src", "tests"]
extraPaths = ["src"]
